# pybinder

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
11bindpy/: CMakeLists.txt
11bindpy/src/: main.cpp  mod1.py  mod2.py
scripts/: BuildRustExt.ps1  BuildRustExt.sh  build.ps1
src/: CMakeLists.txt
src/_env_builder/templates/: temp1.py
src/env_builder/: __init__.py
src/go_extension/: CMakeLists.txt  README.md  main.cpp  number_copy.h
src/nim_extension/: CMakeLists.txt  README.md  main.cpp  main.py
src/nim_extension/buildalot/: test.js  test.nim
src/rust_extension/: Cargo.toml  README.md  pyproject.toml
src/rust_extension/src/: lib.rs
tests/: test_print.py
