[tool.poetry]
name = "poetry-tox-demo"
version = "0.1.0"
description = ""
authors = ["Emia <raojin@max-optics.com>"]
readme = "README.md"
packages = [
    {include = "env_builder", from = "src"},
    {include = "_env_builder", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
pybind11="^2.10.0"

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple/"
default = true
secondary = false

[build-system]
requires = ["poetry-core", "cython ~= 0.29.0"]
build-backend = "poetry.core.masonry.api"

#[tool.cibuildwheel]
#test-command = "python {project}/tests/test.py"
#test-skip = "*universal2:arm64"
